[package]
name = "nucleotide-subsequence"
version = "0.1.0"
authors = ["Michael Ripley <zkxs00@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
panic = "abort"
codegen-units = 1

[dependencies]
slice-deque = "0.2"
clap = "2"
regex = "1"
lazy_static = "1"
